83. Connecting Our Database with the Express App

--- a/config.env
+++ b/config.env
@@ -1,3 +1,5 @@
 NODE_ENV="development"
 PORT=8000
 NICKNAME="nic3guy"
+DATABASE="mongodb+srv://nic3guy:<PASSWORD>@cluster0.8phljjg.mongodb.net/natours?retryWrites=true&w=majority"
+DATABASE_PASSWORD="22fqZE4kXZ47rgwI"
