--- a/config.env
+++ b/config.env
@@ -2,4 +2,4 @@ NODE_ENV="development"
 PORT=8000
 NICKNAME="nic3guy"
 DATABASE="mongodb+srv://nic3guy:<PASSWORD>@cluster0.8phljjg.mongodb.net/natours?retryWrites=true&w=majority"
-DATABASE_PASSWORD="22fqZE4kXZ47rgwI1"
+DATABASE_PASSWORD="22fqZE4kXZ47rgwI"
