129. Signing up Users

--- a/config.env
+++ b/config.env
@@ -3,3 +3,6 @@ PORT=8000
 NICKNAME="nic3guy"
 DATABASE="mongodb+srv://nic3guy:<PASSWORD>@cluster0.8phljjg.mongodb.net/natours?retryWrites=true&w=majority"
 DATABASE_PASSWORD="22fqZE4kXZ47rgwI"
+
+JWT_SECRET="asdw23123498afjksaflawfsjawfa314"
+JWT_EXPIRES_IN="90d"
