--- a/config.env
+++ b/config.env
@@ -6,6 +6,7 @@ DATABASE_PASSWORD="22fqZE4kXZ47rgwI"
 
 JWT_SECRET="asdw23123498afjksaflawfsjawfa314"
 JWT_EXPIRES_IN="90d"
+JWT_COOKIE_EXPIRES_IN=90
 
 EMAIL_USERNAME='431d3933b17d43'
 EMAIL_PASSWORD='adc926729af5ee'
